<resources>
    <string name="app_name">Destini</string>
    <string name="T1_logo">ISLAMIC UNIVERSITY OF SCIENCE AND TECHNOLOGY</string>
    <string name="T_6">Bank and Online Payment</string>
    <string name="BankDetails">
        <b>Fee Payment Modes and Banking Facility \n\n\n</b>
        The University provided facility for the students to deposite the various fee like\n\n

        Admission Fee\n
        Semester Registration Fee\n
        Examination Fee\n
        Transport Fee\n
        Hostel Fee\n
        Other Fee\n\n

    Through Both the methods Online and Offine mode \n\n\n\n
        <b><u>Online Mode (Through Payment Gateway)</u></b>\n
        Fee payment mode\n\n
        1. Net-Banking\n
        2. Credit Card\n
        3. Debit Card\n
        4. UPI\n
        5. Wallets\n\n\n
        <b><u>Offline Mode (Through JK Bank)</u></b>\n\n
        The student has to pay their dues through challan generated from student login account and deposite
        the challan in any branch of JK Bank.The JK Bank has opened its full fledged branch with ATM facility in the
        University campus for the benefit of students and staff. The branch was inaugurated on 9th of November 2012.\n

    </string>
    <string name="T_Admin">ADMINSTRATION</string>
    <string name="T_About"><b>Islamic University of Science and Technology</b> is a premier educational university, approved by UGC and recognised by AICTE. The institute was established in November 2005 and ranks among the best colleges in the segment. It offers a wide range of courses in various disciplines of science and technology. With its modern infrastructure facilities and a regularly updated library, it focuses on providing latest technological solutions to aid students in their studies. It has a lush green campus spread over several acres and located in the heart of the nature.</string>
    <string name="T_Vc">Message from VC</string>
    <string name="T_VcMessage"><b><u>Message from VC </u></b>\n\n
    <b> Mushtaq A Siddiqi</b>\n\n
    It is a moment of pride for me to address each and every student who aspires to be a part of the IUST family. The Islamic University of Science and Technology (IUST) was established in 2005 with an objective to create a fertile environment for young minds to blossom and develop into well-grounded torch bearers of our future. Since then, the university has been constantly striving not only to provide a thorough and in depth academic education to our students but also instill in them righteous and scrupulous values that will go a long way in sculpting a better present and by extension a reliable future.\n\n
    Our motto is directed towards cultivating such a congenial environment on the campus so that students feel at ease while engaging in the plethora of curricular and co-curricular activities that the varsity has to offer. We will be promoting a culture of healthy dialogue and tolerance with emphasis on skill development in addition to a committed attitude towards learning and studies that is supplemented by our state of the art and avant-garde facilities. Our high quality and passionate faculty endeavors to aid and assist all the students in every possible way as we highly value our student community for they are truly the ambassadors and campaigners of our efforts. Faculty is assisted by most dedicated administrative and supportive staff members without whom the infrastructure required for achieving optimal growth of university would have been impossible.\n\n
    IUST has witnessed gradual but steady growth in all the facets of achieving excellence. We have created modern laboratories, computing facilities, web connectivity, library facilities and better power connections. Insha Allah, with the completion and handing over of Lecture theatre block soon, smart classrooms will be available for the upcoming session of 2016. This coupled with sprawling, serene and green campus will provide a conducive environment for the overall growth of our student community for their transformation as educated youth and not literate youth. Our students are our assets in terms of societal commitments and we want to give our best in order to fulfill their dreams. We expect them to be disciplined and open for learning and become leaders in their respective specialties so as to make their alma matter, family and society proud of their achievements. It is important for all stakeholders like students, teachers, and other staff members of IUST to remain focused on their objectives of achieving excellence on the campus as well as in the society. It will give strength and motivation for next group of students to work hard for a greater cause in life. From our side, our primary focus will continue to make this institution a seat of world-class academic learning and research which will ultimately facilitate societal change through inculcating a scientific temper in our community.\n
    I hope the students will benefit greatly by being a part of this university and in turn our present family also benefits from your moral and ethical values, intellect, prudence and wisdom. Wishing you all strength and success for your future.
    Looking forward to seeing you on the campus of IUST soon.</string>
    <string name="T_Dean">Deans of Schools </string>
    <string name="T_noDean">\n
    <b><u>Deans of Schools</u></b>\n\n\n
    <b>Dean School of Health Sciences\n</b>

         Prof. Mushtaq A. Siddiqi\n


        01933-247954,247954 / 1011 / 1013\n
        vc@islamicuniversity.edu.in\n\n

    <b> Dean School of Humanities / Sciences\n</b>
         Prof. A.S. Bhat\n

        Head Department of Economics\n
        01933-247954 ,247954 / 1059\n
        dean_sos@islamicuniversity.edu.in\n\n

        <b>Dean School of Management Studies\n</b>
        Prof. A.M. Shah\n

        01933-247954,247954 / 1051\n
        dean.sbs@islamicuniversity.edu.in\n\n

        <b>Dean School of Technology\n</b>
        Prof. A. H. Moon\n

        Head Department of Electronics and Communication Engineering\n
        01933-247954 ,247954\n
        ayaz.moon@islamicuniversity.edu.in\n
</string>
    <string name="T_Transport">Transport Services</string>
    <string name="T_TransportService">
        <b>Transport Facility for Students and Staff </b>\n\n
        The University has a fleet of buses plying on different routes like Srinagar, Shopian, Pulwama, Anantnag, and Tral.
        The buses transport students and staff to and from campus on daily basis.
        Allotment of the bus facility is limited and is made as per the vacancies available preferably to the girls’ students.
        Students may avail private and government transport that constantly and frequently plies between different districts to University campus at Awantipora.
        For availing or cancelation of transport facility go to student services and then create an account and then apply for transport facility.\n\n
        <b> Buses plying on different routes</b>\n\n\n\n

        01— BALSOO,KAIMO,WANPHOO,HARNAGH, IUST\n
        02—NATIPORA,CHANIPORA,MATHEN,AHAMEDIYA HOSPITAL,NOWGAM,PANTHCHOWK ,IUST\n
        03—MOLVI STOP,BUTKADAL,MIL STOP,ZADIBAL,ALAMGARI BAZAR,HAWAL,NOWHATTA,DALGATE ,IUST\n
        04—BUS ADA TRAL,SHAIR ABAD,NOWDAL ,IUST\n
        05—CHADURA, KRALPORA,BAGHMAHTAB,CHANIPORA,BYPASS,NOWGAM ,IUST\n
        06—DIALGAM, BON DIALGAM, MOMINABAD, ASHAJIPORA, JANGLATMADI, LALCHOWK, KHANANBAL, KMDA, IUST\n
        07—RAMBAGH,NATIPORA,NAIK BAGH,NOWGAM,PANTHCHOWK , IUST\n
        08—HUMHAMA CHOWK, PEER BAGH,HYDERPORA BRIDGE,SANATNAGER,NOWGAM,LASJAN BRIDGE, IUST\n
        09—RAMBAGH,SOLINA,TULSIBAGH,JAWAHARNAGER,RAJBAGH,TRC ,IUST\n
        10--RANIWARI,KHANYAR,KHYAM,DALGATE,SONWAR,BATWARA,LASJAN,PAMPORE, IUST\n
        11--KANITAR,UMMER COLONY,LALBAZAR,BUDSHAH MOLHA,MOLVI STOP,MILSTOP, IUST\n
        12--GULAB BAGH VIA GREEN VALLEY SCHOOL, 90 FEET, P-S SOURA, ALI JAN ROAD , SEKDAFER, KARAN NAGAR , FIRE STATION BATMALOO , IUST\n
        13--BUS ADA TRAL,SHAIR ABAD,NOWDAL ,IUST\n
        14--BARBARSHAH,BOHRIKADAL,RAZIKADAL GOJWARA,NOWHATTA,TRC,SONWAR, IUST\n
        15--PULWAMA,PRICHOO,GANGOO,PINGLINA,PAHOO,KAKAPORA,SAMBORA,GALANDER, IUST\n
        16--OMPORA,BUDGAM,AIRPORT,PEERBAGH,HYDERPORA,SANATNAGER,CHANIPORA,BYPASS , IUST\n
        17--HYDERPORA,PARRYPORA,BAGHAT,BARZULA,SANATNAGER,BYPASS, IUST\n
        18--KANITAR,SADRIBAL,KU,NIET,SADAKADAL,RANIWARI,TRC , IUST\n
        19--BEMINA,PARAMPORA,QAMERWARI,BATMALOO,FIRE SERVICE,TRC ,IUST\n
        20--HABBAK,MALBAGH,ELLAHIBAGH,90 FEET,NOWSHARA,HAWAL,NOWHATTA,MUNWAR,TRC ,IUST\n
        21--NARBAL,HMT,BEMINA,HYDERPORA BYPASS, IUST\n
        21-A--HARWAN,SHALIMAR,NISHAT,BRAIN,SONWAR, IUST\n
        21-B--KAMARWARI CROSSING, BEMINA CROSSING, IQBALABAD, GRID STATION, BEMINA BYEPASS, IUST\n
        22--RANGRATH,RAWALPORA,SANATNAGER,BYPASS, IUST\n
        23--DIALGAM,BON DIALGAM,MOMIN ABAD,AASHIPORA,JANGLAT MANDI,LAL CHOWK, IUST\n
        24--SHOPIAN,SOOFANAMA,SHARIMAL,TOOKRO,KEIGAM,HALL,NAIKES,BUNDZOO,PULWAMA,KOIL, IUST\n
        25--TRAL BUS STAND,TRALI BALA,AMIR ABAD,MIR,DADASARA,CHANDRIGAM,NOORPORA ,IUST\n
        26--AHMADNAGER,90 FEET, SOURA, ALAMGARI BAZAR,NOWHATTA,GOWSIYA HOSPITAL KHYAM, DALGATE, IUST\n
        27--AALI MASJID,EIDGAH,SAFAKADAL,KARANAGER,BATMALOO,LAL CHOWK ,IUST\n
        28--SOURA,ALIJAN ROAD,NALIMAR ROAD RAJOURI KADAL,BABDEM,TRC, IUST\n
        29--PANDASH,NAGBAL,GULABAGH,ZAKOORA CROOSING,HABBAK,KU,RANIWARI,DALGATE ,IUST\n
        30--MUJGUND,HMT,BEMINA,HYDERPORA BYPASS ,IUST\n
        31--MATTAN,IQBAL ABAD,SARNEL,LAZIBAL,SADIQ ABAD, IUST\n
        32--SRIGUFWARA,CHENIWADER, KANELWON, THUJWARA, TAKIBAL, ZIRPARA, PADSHAHBAGH , IUST\n
        33--NARBAL, HMT, BEMINA, HYDERPORA BYEPASS, NOWGAM BYEPASS, IUST\n
        34--NISHAT, BRAIN, KRALSAGRI, NEHRUPARK, DALGATE, TRC, SONWAR, PANTHACHOWK, PAMPORE, IUST\n
        35--NATIPORA, CHANPORA, BAGHEMETAB, KRALPORA, IUST\n
        36--KULGAM,KAIMO,WANPHOO,HARNAGH, IUST\n
        37--RAJPORA, PULWAMA,TANGPONA,KOIL,LAJURA,MALANGPORA ,IUST\n
        38--LAZIBAL, KHANABAL, BIJBEHARA, IUST\n
        39--MOLVI STOP, KANITAR, KU, NIET, RANIWARI, KHANYAR, DALGATE, PAMPORE, IUST\n
        40--PANDCH, NAGBAL, AHMADNAGAR-90 FEET, ELLAHI BAGH, SOURA,ALAMGARI BAZAR,HAWAL, NOWHATTA,KHAYAM,DALGATE,IUST\n
        41--WATHURA (PETROL PUMP), KRALPORA, BAGH-E-MEHTAB, CHANAPORA, PANTHACHOWK, SEMPORA, PAMPORE, IUST.\n
        42--NATIPORA CHOWK, CHANAPORA FLYOVER, CHADOORA, CHRAR-I-SHARIEF\n




            </string>
    <string name="T_IT_Section">It Section</string>
    <string name="T_ITdetails">
        <b><u>It Section</u></b>
        \n <b>Mr.Sameer Wazir\n</b>
            I/C IT\n
            01933-247954 / 1030\n
            sameer.wazir@islamicuniversity.edu.in\n\n\n
        <b><u>Staff in the Section</u></b>\n\n
        <b>Moazam Ul Shawkat Qadiri\n</b>
            IT Assistant\n
                moazam.qadri@islamicuniversity.edu.in\n
            01933-247954 Ext: 1044\n
            9906961075\n
        \n\n
        <b>Sarfaraz Ahmad Bhat\n</b>
            IT Assistant\n
                sarfaraz.bhat@islamicuniversity.edu.in\n
            01933-247954 / 1044\n
            9622278742 / 7006151671 \n




    </string>
    <string name="T_Department">DEPARTMENT</string>
    <string name="T_DeptEng">School of Technology</string>
    <string name="Civil">Civil Department</string>
    <string name="Electrical">Electrical Department</string>
    <string name="Mechanical">Mechanical Department</string>
    <string name="Electronics">Electronics and Communication Department</string>
    <string name="Computer">Computer Science and Engineering Department</string>
    <string name="Food">Electrical Department</string>
    <string name="Msg">Message from HOD</string>
    <string name="Faculty">Faculty Members</string>
    <string name="T_Student">STUDENT SERVICE</string>
    <string name="T_Social">SOCIAL</string>
    <string name="T_Location">LOCATION</string>
</resources>